--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,9 @@
     <string name="btnConfirmDeleteAccount">Yes, delete my account</string>
     <string name="AlertDeleteAccount">Are you sure? This cannot be undone</string>
     <string name="toast_account_deleted">Your account has been succesfully deleted</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hint_height">Height (cm)</string>
     <string name="hint_weight">Weight (kg)</string>
+    <string name="user">User:</string>
+    <string name="email" translatable="false">Email:</string>
+    <string name="preferences">Preferences:</string>
 </resources>
