API requests updated, UTF-8 bug completely fixed, pulke and sake removed, vermouth added

--- a/Boozer (Android Studio)/app/src/main/res/values-es/strings.xml
+++ b/Boozer (Android Studio)/app/src/main/res/values-es/strings.xml
@@ -18,11 +18,10 @@
         <item>Champagne</item>
         <item>Ginebra</item>
         <item>Licor</item>
-        <item>Pulke</item>
         <item>Ron</item>
-        <item>Sake</item>
         <item>Sidra</item>
         <item>Tequila</item>
+        <item>Vermouth</item>
         <item>Vino</item>
         <item>Vodka</item>
         <item>Whisky</item>
